# libwsi

./: README.md  meson.build  meson_options.txt
examples/: meson.build
examples/eglgears/: eglgears.c  linux.c  meson.build
examples/vkcube/: linux.c  meson.build  vkcube.c  vkcube.frag  vkcube.vert
include/: meson.build
include/wsi/: common.h  egl.h  event_queue.h  input.h  output.h  platform.h  seat.h  vulkan.h  window.h
include/wsi/egl/: egl.h
include/wsi/vulkan/: vulkan.h
src/: meson.build
src/cocoa/: common_priv.h  input.c  meson.build  platform.m  platform_priv.h  utils.h  vulkan.m  window.m  window_priv.h
src/linux/: meson.build
src/linux/wayland/: common_priv.h  input.c  input_priv.h  meson.build  output.c  output_priv.h  platform.c  platform_priv.h  window.c  window_priv.h
src/linux/wsi/: egl.c  meson.build  vulkan.c
src/linux/x11/: common_priv.h  egl.c  input_priv.h  meson.build  utils.h  vulkan.c  window.c  window_priv.h
src/macos/: common_priv.h  input.c  input_priv.h  meson.build  platform.m  platform_priv.h  vulkan.m  window.m  window_priv.h
src/wayland/: common_priv.h  egl.c  event_queue.c  event_queue_priv.h  input.c  input_priv.h  keyboard.c  keyboard_priv.h  meson.build  output.c  output_priv.h  platform.c  platform_priv.h  pointer.c  pointer_priv.h  seat.c  seat_priv.h  vulkan.c  window.c  window_priv.h
src/wayland/egl/: egl.c  egl_priv.h
src/wayland/vulkan/: vulkan.c
src/wsi/: egl.c  event_queue.c  event_queue_priv.h  input.c  input_priv.h  meson.build  output.c  output_priv.h  platform.c  platform_priv.h  seat.c  seat_priv.h  vulkan.c  window.c  window_priv.h
src/wsi/egl/: egl.c
src/wsi/vulkan/: vulkan.c
src/x11/: common_priv.h  input.c  input_priv.h  meson.build  platform.c  platform_priv.h  vulkan.c  window.c  window_priv.h
src/xcb/: common_priv.h  event_queue.c  event_queue_priv.h  meson.build  platform.c  platform_priv.h  utils.c  utils.h  vulkan.c  window.c  window_priv.h
src/xcb/egl/: egl.c
src/xcb/vulkan/: vulkan.c
